--- a/public/asset/CSS/STYLE_combinéACCEUIL.css
+++ b/public/asset/CSS/STYLE_combinéACCEUIL.css
@@ -10,16 +10,17 @@
     display: flex;
     justify-content: space-between;
     padding: 0 25px;
-    background-color: #ff9900;
+  background-color: white;
     align-items: center;
+    border-bottom: 3px solid #ff9900;
 }
 .logo{
     font-size: 25px;
     font-weight: bold;
-    color: white;
+    color: #ff9900;
 }
 .navigation .nav-link a {
-  color: white;
+  color: rgb(3, 3, 3);
     text-decoration: none;
     font-weight: 600;
 }
@@ -78,6 +79,7 @@ margin-top: 10px;
 
 #btn2 {
     border: 1px solid green;
+    background-color: #ff9900;
 }
 
 #btn2:hover {
@@ -151,6 +153,10 @@ margin-top: 10px;
     margin-right: 15px;
 }
 
+.user-profil{
+    position: relative;
+  
+}
 .user-icone span {
     font-size: 22px;
 }
@@ -178,10 +184,6 @@ color: black;
        width: 100%;
       align-items: center;
       margin-left: -100%;
-   
- 
- 
-
     }
     .mobilemenu{
         margin-left: 0;
@@ -204,12 +206,49 @@ color: black;
     }
    .user-profil{
     margin-left: 200px;
-   }
+  }
 }
 
 /* FIN NAVBAR*/
 
 /* DEBUT PARTIE ACCEUIL*/
+
+#imageaceuil{
+    width: 100%;
+    height: 350px;
+   margin-top: 40px;
+} 
+.img-container{
+    position: relative;
+   box-shadow: 3px 2px 3px black ; 
+  
+}
+.acceuil{
+    position: absolute; 
+    top: 45%;
+    left: 50%;
+    transform: translate(-50%,-50%);
+    font-weight: bold;
+}
+.h1acceuil{
+    position: absolute; 
+    top: 30%;
+    left: 50%;
+    transform: translate(-50%,-50%);
+    font-weight: bold;
+    color: white;
+    text-shadow: -30px 10px 3px gray;
+   
+    z-index: 111;
+}
+
+#btnacceuil{
+    position: absolute; 
+    top: 45%;
+    left: 67%;
+    transform: translate(-50%,-50%);
+    font-weight: bold;
+} 
 
 /* DEBUT CATEGORIES DE SERVICES ET LA PARTIE PLUS DE SERVICE*/
 .ima{
@@ -249,6 +288,11 @@ color: black;
 }
 a{
 text-decoration: none;
+}
+#infoservice{
+    background-image: url(asset/image/service_logo.jpg);
+    background-repeat: no-repeat;
+    background-color:rgb(252, 247, 247);
 }
 /* FIN CATEGORIES DE SERVICES ET LA PARTIE PLUS DE SERVICE*/
 
@@ -328,8 +372,11 @@ text-decoration: none;
     background: rgb(214, 207, 207);
     box-shadow: 2px 3px 4px;
     padding: 10px;
+    transition: transform 1s ease;
 }
-
+#s3_first:hover {
+    transform: scale(1.03);
+}
 #s3_first h4 {
     padding: 5px;
 }
@@ -345,7 +392,8 @@ text-decoration: none;
 /*  FIN PARTIE ABONNEMENT */
 
 
-/*  DEBUT PARTIE CONTACTS */
+/*  DEBUT PARTIE
+ CONTACTS */
 .Coordonnées{
     border-radius: 10px;
     padding-left: 10px;
@@ -544,3 +592,22 @@ li {
 }
 
 /* FIN FOOTER*/
+/*modification */
+
+#imagepacks{
+    width: 100%;
+    height: 300px;
+   margin-top: 40px;
+ filter: blur(5px);
+
+}
+.h1packs{
+    position: absolute; 
+    top: 30%;
+    left: 50%;
+    transform: translate(-50%,-50%);
+    font-weight: bold;
+    color: white;
+    z-index: 111;
+}
+
