--- a/public/asset/CSS/STYLE_combinéACCEUIL.css
+++ b/public/asset/CSS/STYLE_combinéACCEUIL.css
@@ -90,6 +90,7 @@ margin-top: 10px;
 .user-img {
     border-radius: 50%;
     width: 50px;
+    height: 50px;
     object-fit: cover;
     position: relative;
     top: 20%;
@@ -121,6 +122,7 @@ margin-top: 10px;
     border-radius: 50%;
     width: 50px;
     object-fit: cover;
+    height: 50px;
 
 }
 
@@ -143,8 +145,8 @@ margin-top: 10px;
     margin: 12px 0;
 }
 
-.user-icone p {
-    width: 70%;
+.user-icone p, button {
+
     margin-bottom: 0;
 
 }
@@ -157,9 +159,7 @@ margin-top: 10px;
     position: relative;
   
 }
-.user-icone span {
-    font-size: 22px;
-}
+
 .iconebars{
     display: none; padding-right: 10px;
     font-size: 25px;
@@ -188,6 +188,11 @@ color: black;
     .mobilemenu{
         margin-left: 0;
     }
+    .navigation .nav-link a {
+        color:white;
+          text-decoration: none;
+          font-weight: 600;
+      }
     .nav-link ul Li {
       
         margin: 15px 0;
@@ -249,6 +254,32 @@ color: black;
     transform: translate(-50%,-50%);
     font-weight: bold;
 } 
+
+
+@media screen and (max-width:750px){
+    #imageaceuil{
+        width: 100%;
+        height: 300px;
+       margin-top: 40px;
+    } 
+    .acceuil{
+        position: absolute; 
+        top: 50%;
+        left: 40%;
+        transform: translate(-50%,-50%);
+        font-weight: bold;
+        width: 250px!important;
+
+    }
+    #btnacceuil{
+        position: absolute; 
+        top: 50%;
+        left: 77%;
+        transform: translate(-50%,-50%);
+        font-weight: bold;
+    
+    } 
+}
 
 /* DEBUT CATEGORIES DE SERVICES ET LA PARTIE PLUS DE SERVICE*/
 .ima{
@@ -338,7 +369,10 @@ text-decoration: none;
 .owl-nav{
     display: none;
 }
-
+.owl-carousel {
+    width: 100%;
+    margin: auto;
+  }
 /* FIN TEMOIGNAGES*/
 
 /* FIN PARTIE ACCEUIL*/
@@ -485,16 +519,17 @@ font-size: 22px;
 }
 
 .motdepasse i.active::before {
-    content: '\f070';
-    color: #ff9900;
+    content: '\f06e';
+    
 }
 
 .confirmation i.pret::before {
-    content: '\f070';
-    color: #ff9900;
+    content: '\f06e';
+   
 }
 #containerinscription{
 padding: 50px;
+background-color: #ff9900;
 }
 
 /* FIN PARTIE INSCRIPTION*/
@@ -503,11 +538,12 @@ padding: 50px;
 /* DEBUT PARTIE CONNEXION*/
 #s6_contain {
     width: 400px;
-    height: 430px;
+    height: 490px;
     border: 1px solid rgba(216, 210, 210, 0.603);
-    margin-top:50px;
+    margin-top:30px;
     border-radius: 20px;
     padding: 20px;
+    
 }
 
 .s6_submit {
@@ -535,8 +571,8 @@ padding: 50px;
 }
 
 .s6_motdepasse i.active::before {
-    content: '\f070';
-    color: #ff9900;
+    content: '\f06e';
+   
 }
 
 .s6_monlien
