--- a/public/asset/CSS/temoignage.css
+++ b/public/asset/CSS/temoignage.css
@@ -37,23 +37,30 @@ textarea{
   
 }
 /*ETOILE*/
+#etoile{
+    position: relative;
+}
+.star-etoile{
+    position:absolute;
+
+}
 .star-etoile input[type="radio"]{
     display: none;
 }
 .star-etoile label{
+
     font-size: 20px;  
    color: #444;
-
+   float: right;
    transition: all 0.2s ease;
 
 }
-.star-etoile input:not(:checked) ~label:hover,input:not(:checked) ~label:hover~label{
+input:not(:checked) ~ label:hover,input:not(:checked) ~ label:hover ~ label{
 color: #fd4;
 }
-input:checked~label{
+input:checked ~ label{
     color: #fd4;
 }
 input#rate-5:checked ~ label{
     color: #fd4;
-    
 }
